# securefox

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  TECHNICAL_DESIGN.md  WARP.md  test-login.html
.github/: CI_OPTIMIZATION.md  pull_request_template.md  release-notes-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-cli.yml  build-extension.yml  build.yml  ci.yml  release.yml
.qoder/repowiki/zh/content/: 开发者指南.md  快速入门.md  技术栈.md  系统概述.md
.qoder/repowiki/zh/content/API文档/: API文档.md  TOTP API.md  同步API.md  密码生成API.md  条目管理API.md  系统API.md  认证API.md
.qoder/repowiki/zh/content/命令行工具参考/: 保险库管理.md  命令行工具参考.md  实用工具.md  数据导入导出.md  条目管理.md
.qoder/repowiki/zh/content/命令行工具参考/数据同步/: 同步启用与禁用.md  同步守护进程.md  同步状态监控.md  同步配置.md  数据同步.md
.qoder/repowiki/zh/content/命令行工具参考/服务管理/: 停止服务.md  内部运行命令.md  启动服务.md  启用开机自启.md  服务管理.md  查询服务状态.md  禁用开机自启.md  重启服务.md
.qoder/repowiki/zh/content/安全架构/: 加密实现.md  安全最佳实践.md  安全架构.md
.qoder/repowiki/zh/content/安全架构/威胁模型/: 受保护的威胁.md  同步安全机制.md  威胁模型.md  未受保护的威胁.md
.qoder/repowiki/zh/content/安全架构/认证流程/: API认证中间件.md  会话管理机制.md  前端认证实现.md  认证流程.md
.qoder/repowiki/zh/content/数据同步/: API同步端点.md  CLI后台同步守护进程.md  同步配置管理.md  数据同步.md  核心同步逻辑.md
.qoder/repowiki/zh/content/核心架构/: 加密模块.md  存储模块.md  数据模型.md  核心架构.md
.qoder/repowiki/zh/content/浏览器扩展/: API客户端.md  UI组件架构.md  浏览器扩展.md  状态管理.md  自动填充机制.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
api/: Cargo.toml  build.rs
api/src/: auth.rs  error.rs  lib.rs  models.rs  state.rs
api/src/handlers/: mod.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs  sync_daemon.rs  utils.rs
cli/src/commands/: add.rs  edit.rs  export.rs  generate.rs  import.rs  init.rs  list.rs  lock.rs  mod.rs  placeholder.rs  remove.rs  serve.rs  service_disable.rs  service_enable.rs  service_install.rs  service_restart.rs  service_run.rs  service_start.rs  service_status.rs  service_stop.rs  show.rs  sync.rs  sync_config.rs  sync_disable.rs  sync_enable.rs  sync_show.rs  sync_status.rs  totp.rs  tray.rs  unlock.rs
core/: Cargo.toml
core/src/: config.rs  crypto.rs  errors.rs  git_sync.rs  keychain.rs  lib.rs  models.rs  storage.rs  totp.rs
core/src/importers/: bitwarden.rs  mod.rs
docs/: AUTO_SYNC_CN.md  DEVELOPMENT.md  DEVELOPMENT_CN.md  USER_GUIDE_CN.md
extension/: eslint.config.js  icon-preview.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test-forms.html  tsconfig.json  wxt.config.ts
extension/components/: AddItemModal.tsx  CardDetailView.tsx  CreditCardView.tsx  DebugView.tsx  EntryList.tsx  FavoritesView.tsx  LoginDetailView.tsx  MainView.tsx  NoteDetailView.tsx  NotesView.tsx  Notifications.tsx  PasswordGenerator.tsx  SettingsView.tsx  TOTPCode.tsx  UnlockForm.tsx
extension/components/ui/: input.tsx
extension/entrypoints/: background.ts  content.ts
extension/entrypoints/content/: CardMenu.ts  CredentialMenu.ts  IdentityMenu.ts  InlineAutofillIcon.ts  styles.css
extension/entrypoints/popup/: App.tsx  globals.css  index.html  main.tsx  style.css
extension/hooks/: useKeyboardShortcuts.ts
extension/issues/: fix-credit-card-white-screen.md
extension/lib/: storage.ts
extension/lib/api/: auth.ts  client.ts  entries.ts  index.ts  system.ts
extension/scripts/: generate-icons.js
extension/store/: authStore.ts  index.ts  uiStore.ts  vaultStore.ts
extension/types/: index.ts
extension/utils/: cardDetector.ts  constants.ts  helpers.ts
scripts/: club.gclmit.securefox.daemon.plist  generate-changelog.sh  install.sh  uninstall.sh
tray/: Cargo.toml
tray/src/: api_client.rs  icons.rs  main.rs
