[package]
name = "securefox-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "securefox"
path = "src/main.rs"

[dependencies]
# Core library
securefox-core = { workspace = true }
securefox-api = { path = "../api", optional = true }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Async runtime
tokio.workspace = true

# Terminal UI
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
colored = "2.1"

# Table formatting
comfy-table = "7.1"

# Error handling
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Clipboard (supports headless environments)
copypasta-ext = "0.4"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Password generation
passwords = "3.1"

# File handling
dirs = "5.0"
chrono = "0.4"
ctrlc = "3.4"

# Tray dependencies (macOS-specific)
[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.11"
tao = "0.25"
muda = "0.11"
reqwest = { version = "0.11", features = ["json"] }
webbrowser = "0.8"
cocoa = "0.25"
users = "0.11"

[features]
default = ["serve", "git", "keychain"]
serve = ["dep:securefox-api"]
git = ["securefox-core/git"]
keychain = ["securefox-core/keychain"]
vendored-ssl = ["securefox-core/vendored-ssl"]

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
