[package]
name = "club-gclmit-securefox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Encryption
argon2 = "0.5"
aes-gcm-siv = "0.11"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.21"

# TOTP
totp-rs = { version = "5.0", features = ["qr", "serde_support"] }
base32 = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Git (optional)
git2 = { version = "0.18", optional = true }

# System keychain
keyring = { version = "2.0", optional = true }

# Logging
tracing.workspace = true

# Directories
dirs = "5.0"

[features]
default = ["git", "keychain"]
git = ["dep:git2"]
keychain = ["dep:keyring"]

[dev-dependencies]
tempfile = "3.8"