[package]
name = "securefox-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "securefox-tray"
path = "src/main.rs"

[dependencies]
# Tray icon
tao = "0.25"
tray-icon = "0.11"
muda = "0.11"

# Image processing
image = "0.24"

# HTTP client for API communication
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# System integration
dirs = "5.0"
open = "5.0"

# Clipboard
clipboard = "0.5"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[build-dependencies]
embed-resource = "2.4"